# OCR-image-generation-preprocessing

./: image_create.py  image_generator.py  image_metadata_generator.py  main.py  preprocess.py  pyproject.toml  script.py  text_generator.py
